k8s/tools/searxng/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: default
  labels:
    app: searxng
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: searxng-data
              mountPath: /etc/searxng
              subPath: shared/searxng/config
            - name: searxng-data
              mountPath: /var/cache/searxng
              subPath: shared/searxng/cache
      volumes:
        - name: searxng-data
          persistentVolumeClaim:
            claimName: searxng-data
