k8s/tools/searxng/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: default
  labels:
    app: searxng
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: searxng
